Created structure for carousel 1

--- a/_factory_blog_post.html
+++ b/_factory_blog_post.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Blog Post</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -25,9 +25,9 @@
                         <div class="pd-blog-post-1-image-outer">
                             <picture>
                                 <source srcset="/images/uploads/blog-post-1.webp 2000w, 
-                                                /images/uploads/blog-post-1-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 64px), 2000px" type="image/webp"> 
+                                                /images/uploads/blog-post-1-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 64px), 2000px" type="image/webp"/> 
                                 <img srcset="/images/uploads/blog-post-1.jpg 2000w, 
-                                                /images/uploads/blog-post-1-mob.jpg 820w" sizes="(max-width: 600px) calc(100vw - 64px), 2000px" src="/images/uploads/blog-post-1.jpg">
+                                                /images/uploads/blog-post-1-mob.jpg 820w" sizes="(max-width: 600px) calc(100vw - 64px), 2000px" src="/images/uploads/blog-post-1.jpg"/>
                             </picture>
                         </div>                         
                     </div>
@@ -42,29 +42,24 @@
                                 <h1 class="pd-blog-post-1-headline">The Roots of Recruitment - from Boots to Spacesuits</h1>
                                 <div class="pd-blog-post-1-author-outer">
                                     <div class="pd-blog-post-1-author-inner">
-                                        <img src="images/uploads/testimonial-woman-2.jpg">
+                                        <img src="images/uploads/testimonial-woman-2.jpg"/>
                                         <div class="ps-2">
                                             <p class="pd-blog-post-1-author-name">Kay Allsop <span>- 21 Dec 2021</span></p>
                                             <p class="pd-blog-post-1-author-role">HR Director</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pd-blog-post-1-social-outer">
-                                    <a name="anchor" href="#"><img alt="icon for email" width="32" height="32" src="images/design-assets/icon-email-primary.svg"></a>
-                                    <a name="anchor" href="#"><img src="images/design-assets/icon-facebook-share.svg" alt="icon for facebook" width="32" height="32"></a>
-                                    <a name="anchor" href="#"><img alt="icon for twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"></a>
-                                    <a name="anchor" href="#"><img alt="icon for linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"></a>
+                                <div class="pd-blog-post-1-social-outer"><a name="anchor" href="#"><img alt="icon for email" width="32" height="32" src="images/design-assets/icon-email-primary.svg"/></a><a name="anchor" href="#"><img src="images/design-assets/icon-facebook-share.svg" alt="icon for facebook" width="32" height="32"/></a><a name="anchor" href="#"><img alt="icon for twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"/></a><a name="anchor" href="#"><img alt="icon for linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"/></a>
                                 </div>
                             </header>
                             <div class="pd-blog-post-1-main">
                                 <p>Aenean in auctor eros. Vestibulum ac metus consectetur, venenatis magna id, vestibulum arcu. Donec at massa iaculis, cursus dolor eget, vestibulum ex. magna pellentesque. Vivamus congue, <a href="#">sapien vitae</a> malesuada porttitor, mauris mauris scelerisque sapien, nec scelerisque risus mi ut enim. Curabitur sit amet lorem ipsum. Praesent pulvinar elit ipsum, et laoreet velit malesuada eu. Donec laoreet blandit lorem et efficitur. <strong>Praesent hendrerit ante in quam laoreet, vel venenatis.</strong> Morbi blandit tincidunt aliquam. Proin ullamcorper orci id augue molestie, vitae porta massa sodales.</p>
                                 <h2>Heading 2</h2>
                                 <p>Morbi id accumsan ligula, sit amet mattis ipsum. Curabitur et iaculis massa. Pellentesque libero metus, convallis non consectetur vel, maximus eu leo. Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
-                                <blockquote>
-                                    <strong>Urabitur laoreet</strong> mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.
+                                <blockquote><strong>Urabitur laoreet</strong> mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.
                                 </blockquote>
                                 <p>Morbi id accumsan ligula, sit amet mattis ipsum. Curabitur et iaculis massa. Pellentesque libero metus, convallis non consectetur vel, maximus eu leo. Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
-                                <img src="https://pinegrow.com/placeholders/img15.jpg">
+                                <img src="https://pinegrow.com/placeholders/img15.jpg"/>
                                 <h3>Heading 3</h3>
                                 <p>Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
                                 <ul>
@@ -78,11 +73,7 @@
                             </div>
                             <div class="pd-blog-post-1-share-article">
                                 <p>Share this article</p>
-                                <div>
-                                    <a name="anchor" href="#"><img src="images/design-assets/icon-email-primary.svg" alt="icon for sharing by email" width="32" height="32"></a>
-                                    <a name="anchor" href="#"><img src="images/design-assets/icon-facebook-share.svg" alt="icon for facebook" width="32" height="32"></a>
-                                    <a name="anchor" href="#"><img alt="icon for twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"></a>
-                                    <a name="anchor" href="#"><img alt="icon for linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"></a>
+                                <div><a name="anchor" href="#"><img src="images/design-assets/icon-email-primary.svg" alt="icon for sharing by email" width="32" height="32"/></a><a name="anchor" href="#"><img src="images/design-assets/icon-facebook-share.svg" alt="icon for facebook" width="32" height="32"/></a><a name="anchor" href="#"><img alt="icon for twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"/></a><a name="anchor" href="#"><img alt="icon for linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"/></a>
                                 </div>
                             </div>
                         </div>                         
@@ -102,97 +93,81 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
                         <div class="pd-cards-posts-1-card-outer">
-                            <div class="pd-cards-posts-1-image-outer">
-                                <a href="#" name="anchor"><picture>
-                                        <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
-                                        <img src="/images/uploads/cards-sample-1.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                            <div class="pd-cards-posts-1-image-outer"><a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
+                                        <img src="/images/uploads/cards-sample-1.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image"/>
                                     </picture></a>
-                                <div class="pd-cards-posts-1-categories-outer">
-                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Software</a>
+                                <div class="pd-cards-posts-1-categories-outer"><a href="#" name="anchor" class="pd-cards-posts-1-category">Software</a>
                                 </div>
                             </div>
                             <div class="pd-cards-posts-1-text">
                                 <header>
-                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
-                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The Roots of Recruitment - from Boots to Spacesuits</h3></a>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p><a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The Roots of Recruitment - from Boots to Spacesuits</h3></a>
                                 </header>
                                 <div class="pd-cards-posts-1-body-text">
                                     <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
                                 </div>
                                 <div class="pd-cards-posts-1-tags-outer">
-                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20"/>
                                     <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        <li class="list-inline-item"><a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
                                         </li>
                                     </ul>
-                                </div>
-                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                                </div><a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
                             </div>
                         </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
                         <div class="pd-cards-posts-1-card-outer">
-                            <div class="pd-cards-posts-1-image-outer">
-                                <a href="#" name="anchor"><picture>
-                                        <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
-                                        <img src="/images/uploads/cards-sample-2.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                            <div class="pd-cards-posts-1-image-outer"><a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp"/>
+                                        <img src="/images/uploads/cards-sample-2.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image"/>
                                     </picture></a>
-                                <div class="pd-cards-posts-1-categories-outer">
-                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Recruitment</a>
+                                <div class="pd-cards-posts-1-categories-outer"><a href="#" name="anchor" class="pd-cards-posts-1-category">Recruitment</a>
                                 </div>
                             </div>
                             <div class="pd-cards-posts-1-text">
                                 <header>
-                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
-                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>How to supercharge your temp desk</h3></a>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p><a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>How to supercharge your temp desk</h3></a>
                                 </header>
                                 <div class="pd-cards-posts-1-body-text">
                                     <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
                                 </div>
                                 <div class="pd-cards-posts-1-tags-outer">
-                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20"/>
                                     <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        <li class="list-inline-item"><a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
                                         </li>
                                     </ul>
-                                </div>
-                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                                </div><a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
                             </div>
                         </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
                         <div class="pd-cards-posts-1-card-outer">
-                            <div class="pd-cards-posts-1-image-outer">
-                                <a href="#" name="anchor"><picture>
-                                        <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
-                                        <img src="/images/uploads/cards-sample-3.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                            <div class="pd-cards-posts-1-image-outer"><a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp"/>
+                                        <img src="/images/uploads/cards-sample-3.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image"/>
                                     </picture></a>
-                                <div class="pd-cards-posts-1-categories-outer">
-                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Optimizing staffing</a>
+                                <div class="pd-cards-posts-1-categories-outer"><a href="#" name="anchor" class="pd-cards-posts-1-category">Optimizing staffing</a>
                                 </div>
                             </div>
                             <div class="pd-cards-posts-1-text">
                                 <header>
-                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
-                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The real solution to realtime communication</h3></a>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p><a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The real solution to realtime communication</h3></a>
                                 </header>
                                 <div class="pd-cards-posts-1-body-text">
                                     <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
                                 </div>
                                 <div class="pd-cards-posts-1-tags-outer">
-                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20"/>
                                     <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        <li class="list-inline-item"><a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
                                         </li>
-                                        <li class="list-inline-item">
-                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Recruitment software</a>
+                                        <li class="list-inline-item"><a href="#" name="anchor" class="pd-cards-posts-1-tag">Recruitment software</a>
                                         </li>
                                     </ul>
-                                </div>
-                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                                </div><a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
                             </div>
                         </div>                         
                     </div>
