--- a/_factory_carousels.html
+++ b/_factory_carousels.html
@@ -6,18 +6,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <title>Blank Template for Bootstrap</title>
+        <title>Carousels</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
-        <div class="container">
-</div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-carousel-1</p>
+            </div>
+        </section>
+        <section class="pb-5 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>App Features</h2> 
+                        <p>Really big headline</p>
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                    </div>
+                    <div class="col-md-4">
+                        <img src="https://pinegrow.com/placeholders/img14.jpg" class="img-fluid"/>                          
+                    </div>
+                    <div class="col-md-8"> 
+                        <p>See all features:</p> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-carousel-2</p>
+            </div>
+        </section>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
