--- a/_factory_carousels.html
+++ b/_factory_carousels.html
@@ -11,6 +11,7 @@
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet"/>
+        <link href="/assets/css/glide.core.min.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Bootstrap core JavaScript
@@ -21,19 +22,97 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-carousel-1</p>
             </div>
         </section>
-        <section class="pb-5 pt-5">
+        <section class="pb-5 pd-carousel-1 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <h2>App Features</h2> 
-                        <p>Really big headline</p>
+                    <div class="col-12 pb-4 text-center">
+                        <h2 class="pd-carousel-1-label">App Features</h2> 
+                        <p class="pd-carousel-1-headline">Really big headline</p>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
                     </div>
                     <div class="col-md-4">
-                        <img src="https://pinegrow.com/placeholders/img14.jpg" class="img-fluid"/>                          
+                        <div class="glide" data-glide='{"type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1}' style="position: relative;">
+                            <div class="glide__track" data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="glide__slide">
+                                        <div class="pd-carousel-1-slide-outer">
+                                            <picture>
+                                                <source srcset="/images/uploads/section-example-2.jpg" type="image/webp"/>
+                                                <img src="/images/uploads/section-example-2.jpg" class="img-fluid" alt="image from app" width="296" height="592" loading="lazy"/>
+                                            </picture>
+                                        </div>
+                                    </li>
+                                    <li class="glide__slide">
+                                        <div class="pd-carousel-1-slide-outer">
+                                            <picture>
+                                                <source srcset="/images/uploads/section-example-2.jpg" type="image/webp"/>
+                                                <img src="/images/uploads/section-example-2.jpg" class="img-fluid" alt="image from app" width="296" height="592" loading="lazy"/>
+                                            </picture>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="glide__arrows" data-glide-el="controls">
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back.svg"/>
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance.svg"/>
+                                </button>
+                            </div>
+                        </div>                         
                     </div>
                     <div class="col-md-8"> 
-                        <p>See all features:</p> 
+                        <div class="pb-1">
+                            <p>See all features:</p>
+                        </div>
+                        <div class="pd-carousel-1-grid">
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Role tracking</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Digital Timesheets</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Job Matching</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Job Posting</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Automated Candidate Search</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Secure Document Storage</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Instant In-App Chat</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Automated Compliance Monitoring</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Invoicing &amp; Payroll</p>
+                            </div>
+                            <div class="pd-carousel-1-grid-item">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
+                                <p>Invoicing &amp; Payroll</p>
+                            </div>
+                        </div>
+                        <div class="p-4 text-center">
+                            <a href="#" name="anchor" class="btn btn-info btn-lg">Download</a>
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -45,5 +124,7 @@
         </section>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/glide.min.js"></script>
+        <script src="/assets/js/functions-sliders.js"></script>
     </body>
 </html>
