Added outlines to carousel buttons and arrows

--- a/_factory_carousels.html
+++ b/_factory_carousels.html
@@ -110,8 +110,7 @@
                                 <p>Invoicing &amp; Payroll</p>
                             </div>
                         </div>
-                        <div class="p-4 text-center">
-                            <a href="#" name="anchor" class="btn btn-info btn-lg">Download</a>
+                        <div class="p-4 text-center"><a href="#" name="anchor" class="btn btn-info btn-lg">Download</a>
                         </div>                         
                     </div>
                 </div>
