--- a/_factory_carousels.html
+++ b/_factory_carousels.html
@@ -62,6 +62,10 @@
                                     <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance.svg"/>
                                 </button>
                             </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
+                            </div>
                         </div>                         
                     </div>
                     <div class="col-md-8"> 
@@ -110,7 +114,8 @@
                                 <p>Invoicing &amp; Payroll</p>
                             </div>
                         </div>
-                        <div class="p-4 text-center"><a href="#" name="anchor" class="btn btn-info btn-lg">Download</a>
+                        <div class="p-4 text-center">
+                            <a href="#" name="anchor" class="btn btn-info btn-lg">Download</a>
                         </div>                         
                     </div>
                 </div>
