--- a/_factory_lists.html
+++ b/_factory_lists.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Lists</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -24,39 +24,39 @@
                     <div class="col-12">
                         <div class="pd-list-1-grid">
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Role tracking</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Digital Timesheets</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Job Matching</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Job Posting</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Automated Candidate Search</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Secure Document Storage</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Instant In-App Chat</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Automated Compliance Monitoring</p>
                             </div>
                             <div class="pd-list-1-grid-item">
-                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22">
+                                <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Invoicing &amp; Payroll</p>
                             </div>
                         </div>                         
@@ -69,8 +69,68 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-list-2</p>
             </div>
         </section>
-        <div class="container">
-</div>
+        <section class="pb-5 pd-list-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pb-2 pd-list-2-outer pt-2" id="detailed-beach-profiles">
+                        <div class="row">
+                            <div class="col-md-4 pb-3 pb-md-0">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
+                                    <img src="/images/uploads/cards-sample-1.jpg" loading="lazy" alt="image of app" width="416" height="274" class="pd-list-2-image"/>
+                                </picture>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="align-items-center d-flex flex-row justify-content-start pb-2">
+                                    <img src="images/design-assets/icon-checkmark.svg" alt="icon checkmark" width="22" height="22"/>
+                                    <h2>Detailed Beach Profiles</h2>
+                                </div>                                 
+                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 pb-2 pd-list-2-outer pt-2" id="search-by-distance">
+                        <div class="row">
+                            <div class="col-md-4 order-1 order-md-2 pb-3 pb-md-0">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp"/>
+                                    <img src="/images/uploads/cards-sample-2.jpg" loading="lazy" alt="image of app" width="416" height="274" class="pd-list-2-image"/>
+                                </picture>
+                            </div>
+                            <div class="col-md-8 order-2 order-md-1">
+                                <div class="align-items-center d-flex flex-row justify-content-start pb-2">
+                                    <img src="images/design-assets/icon-checkmark.svg" alt="icon checkmark" width="22" height="22"/>
+                                    <h2>Search by Distance</h2>
+                                </div>                                 
+                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 pb-2 pd-list-2-outer pt-2" id="search">
+                        <div class="row">
+                            <div class="col-md-4 pb-3 pb-md-0">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp"/>
+                                    <img src="/images/uploads/cards-sample-3.jpg" loading="lazy" alt="image of app" width="416" height="274" class="pd-list-2-image"/>
+                                </picture>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="align-items-center d-flex flex-row justify-content-start pb-2">
+                                    <img src="images/design-assets/icon-checkmark.svg" alt="icon checkmark" width="22" height="22"/>
+                                    <h2>Search by Current Location or Map</h2>
+                                </div>                                 
+                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-list-3</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
