--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -8,9 +8,9 @@
         <meta name="author" content=""/>
         <title>Sections</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet"/>
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Bootstrap core JavaScript
@@ -723,10 +723,10 @@
                                 <img src="images/design-assets/icon-checkmark.svg" alt="icon of checkmark" width="22" height="22"/>
                                 <p>Invoicing &amp; Payroll</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-12 pt-4 text-center">
-                        <a target="_blank" href="#" name="anchor" class="pd-section-17-btn">Visit the website</a>                          
+                        <a target="_blank" href="#" name="anchor" class="pd-section-17-btn">Visit the website</a> 
                     </div>
                 </div>
             </div>
