--- a/_factory_pricing.html
+++ b/_factory_pricing.html
@@ -46,10 +46,7 @@
                             </header>
                             <div class="pb-3 pd-pricing-1-price-outer text-center">
                                 <p>starting from:</p>
-                                <div class="pd-pricing-1-price">
-                                    <span class="pd-pricing-1-price-label">$USD</span>
-                                    <span class="pd-pricing-1-price-num">99</span>
-                                    <span class="pd-pricing-1-price-label">/month</span>
+                                <div class="pd-pricing-1-price"><span class="pd-pricing-1-price-label">$USD</span><span class="pd-pricing-1-price-num">99</span><span class="pd-pricing-1-price-label">/month</span>
                                 </div>
                             </div>
                             <div>
@@ -59,7 +56,8 @@
                                     <li>Sub Feature 3</li>                                     
                                 </ul>
                             </div>
-                            <footer class="pb-4 pt-4"><a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Start 30 day trial</a>
+                            <footer class="pb-4 pt-4">
+                                <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Start 30 day trial</a>
                             </footer>
                         </div>                         
                     </div>
@@ -74,7 +72,10 @@
                             </header>
                             <div class="pb-3 pd-pricing-1-price-outer text-center">
                                 <p>starting from:</p>
-                                <div class="pd-pricing-1-price"><span class="pd-pricing-1-price-label">$USD</span><span class="pd-pricing-1-price-num">198</span><span class="pd-pricing-1-price-label">/month</span>
+                                <div class="pd-pricing-1-price">
+                                    <span class="pd-pricing-1-price-label">$USD</span>
+                                    <span class="pd-pricing-1-price-num">198</span>
+                                    <span class="pd-pricing-1-price-label">/month</span>
                                 </div>
                             </div>
                             <div>
@@ -86,7 +87,8 @@
                                     <li>Sub Feature 5</li>                                     
                                 </ul>
                             </div>
-                            <footer class="pb-4 pt-4"><a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Start 30 day trial</a>
+                            <footer class="pb-4 pt-4">
+                                <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Start 30 day trial</a>
                             </footer>
                         </div>                         
                     </div>
@@ -96,6 +98,82 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-pricing-2</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-pricing-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <header class="col-12 text-center">
+                        <h2>Our Pricing</h2>
+                        <div class="pd-pricing-2-headline">
+                            <p><strong>Lorem ipsum dolor sit amet</strong></p>
+                        </div>
+                        <div class="pd-pricing-2-subHeadline">
+                            <p>Aliquam erat volutpat. Vestibulum vel sollicitudin lacus. Nullam lorem tortor, luctus ut libero eu, commodo pellentesque erat. Suspendisse nunc justo, volutpat sit amet urna pellentesque, vehicula vulputate mi.</p>
+                        </div>                         
+                    </header>
+                </div>
+                <div class="pb-4 pt-4 row">
+                    <div class="col-12">
+                        <div class="d-flex flex-row justify-content-center">
+                            <div class="pd-pricing-2-grid-outer">
+                                <div class="pd-pricing-2-price-1">
+                                    <header>
+                                        <h3 class="pd-pricing-2-card-headline">Small Business</h3>
+                                        <img src="images/uploads/undraw_sync_files_re_ws4c.svg" alt="image of people using software" width="100" height="150"/>
+                                    </header>
+                                    <div class="align-items-end d-flex flex-row justify-content-start">
+                                        <p class="pd-pricing-2-price-label">$USD</p>
+                                        <p class="pd-pricing-2-price">99</p>
+                                        <p class="pd-pricing-2-price-label">/month</p>
+                                    </div>
+                                    <div class="flex-grow-1 pb-3">
+                                        <p>More explanation of contract</p>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Start 30 day trial</a>
+                                    </div>
+                                    <footer class="pt-4">
+                                        <ul> 
+                                            <li>Sub Feature 1</li>                                             
+                                            <li>Sub Feature 2</li>                                             
+                                            <li>Sub Feature 3</li>                                             
+                                        </ul>
+                                    </footer>
+                                </div>
+                                <div class="pd-pricing-2-price-2">
+                                    <header>
+                                        <h3 class="pd-pricing-2-card-headline">Enterprise</h3>
+                                        <img alt="image of people using software" width="100" height="150" src="images/uploads/undraw_fitting_piece_re_pxay.svg"/>
+                                    </header>
+                                    <div class="align-items-end d-flex flex-row justify-content-start">
+                                        <p class="pd-pricing-2-price-label">$USD</p>
+                                        <p class="pd-pricing-2-price">199</p>
+                                        <p class="pd-pricing-2-price-label">/month</p>
+                                    </div>
+                                    <div class="flex-grow-1 pb-3">
+                                        <p>More explanation of contract</p>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Start 30 day trial</a>
+                                    </div>
+                                    <footer class="pt-4">
+                                        <ul> 
+                                            <li>Sub Feature 1</li>                                             
+                                            <li>Sub Feature 2</li>                                             
+                                            <li>Sub Feature 3</li>                                             
+                                        </ul>
+                                    </footer>
+                                </div>
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-pricing-3</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
