Added FAQs section

--- a/_factory_faqs.html
+++ b/_factory_faqs.html
@@ -92,8 +92,10 @@
                 <div class="pt-4 row">
                     <div class="col-md-6">
                         <div class="pd-faqs-2-card-outer">
-                            <header class="pd-faqs-2-card-header"><a class="pd-faqs-2-btn" href="#" name="anchor">Mauris efficitur, sem sit amet feugiat porta, lectus mauris tincidunt neque?</a>
-                                <div><a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Mauris efficitur, sem sit amet feugiat porta, lectus mauris tincidunt neque?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
                                 </div>
                             </header>
                             <div class="pd-faqs-2-card-body">
@@ -103,8 +105,10 @@
                             </div>
                         </div>
                         <div class="pd-faqs-2-card-outer">
-                            <header class="pd-faqs-2-card-header"><a class="pd-faqs-2-btn" href="#" name="anchor">Pellentesque posuere ullamcorper justo at aliquam?</a>
-                                <div><a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Pellentesque posuere ullamcorper justo at aliquam?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
                                 </div>
                             </header>
                             <div class="pd-faqs-2-card-body">
